# webradius

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml  variables.ini
radius/: admin.py  data_types.py  models.py  views.py
radius-server/: database.py  dictionary  main.py  mawin.py  nas.py  pad.py  radius.ini
radius/dictionaries/: MikrotikDictionary.py  VendorDictionary.py
radius/migrations/: 0001_initial.py  0002_alter_radcheck_op_alter_radgroupcheck_op_and_more.py  0003_alter_nas_type.py
radius/templates/: index.html
radius/templates/pages/: index.html
radius/templates/pages/blocks/: footer.html  head.html  header.html  jquery.html
radiusserver/: README.md  db_rad.py  main.py  radius.ini  radserver.py
webradius/: asgi.py  settings.py  urls.py  wsgi.py
webradius/templates/: 404.html  forgot-password.html  index.html  login.html  updategroup_page.html  updateuser_page.html
webradius/templates/pages/blocks/: header.html  left-sidebar-internal.html  (+1 more)
website/: admin.py  models.py  views.py
website/fixtures/: initial_data.yaml
website/migrations/: 0001_initial.py  0002_mac_addresses_users_id_mac.py  0002_remove_users_usurname_users_email_users_username_and_more.py  0003_level_access_network_devices_attribute.py  0003_remove_mac_addresses_mac_address_adapt_and_more.py  0004_alter_accounting_options_alter_fail_tries_options_and_more.py  0004_alter_mac_addresses_mac_address_add_1_and_more.py  0005_rename_id_user_accounting_id_user_name_and_more.py  0005_users_network_login_users_network_password.py  0006_delete_accounting.py
