[tool.poetry]
name = "webradius"
version = "0.1.0"
description = "Web server for managing radius"
authors = ["Pavel Zarembo <zarembo2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
